--- a/index.html
+++ b/index.html
@@ -24,21 +24,20 @@
 
             <dl class="hidden text-report js-text-report">
                 <dt>Word count</dt>
-                <dd></dd>
+                <dd class="js-word-count"></dd>
 
                 <dt>Unique word count</dt>
-                <dd></dd>
+                <dd class="js-unique-word-count"></dd>
 
                 <dt>Average word length</dt>
-                <dd></dd>
+                <dd class="js-average word length"></dd>
 
                 <dt>Average sentence length</dt>
-                <dd></dd>
+                <dd class="js-average-sentence-length"></dd>
             </dl>
         </main>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-    <script src="app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
