Average Word Length

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <dd class="js-unique-word-count"></dd>
 
                 <dt>Average word length</dt>
-                <dd class="js-average word length"></dd>
+                <dd class="js-average-word-length"></dd>
 
                 <dt>Average sentence length</dt>
                 <dd class="js-average-sentence-length"></dd>
